[package]
name = "travis"
version = "0.1.1"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Travis v3 API interfaces"
documentation = "https://softprops.github.io/travis"
homepage = "https://github.com/softprops/travis"
repository = "https://github.com/softprops/travis"
keywords = ["travis", "api"]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
futures = "0.3"
log = "0.4"
hyper = { version = "0.14", features = ["stream"] }
percent-encoding = "2"
serde = "1.0.9"
serde_derive = "1.0.9"
serde_json = "1.0.2"
tokio = "1"
url = "2"
error-chain = "0.12"
derive_builder = "0.9"

[dev-dependencies]
env_logger = "0.7"
openssl-probe = "0.1.2"

[badges]
travis-ci = { repository = "softprops/travis" }

[dependencies.hyper-tls]
optional = true
version = "0.3.1"

[dependencies.hyper-rustls]
optional = true
version = "^0.22"
features = ["webpki-tokio"]

[features]
default = ["tls"]
tls = ["hyper-tls"]
rustls = ["hyper-rustls"]
